crates/tmc-langs-cli/tests/snapshots/integration__compress_project_tar@make__failing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/make/failing-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: af5999a18601ece4e10dea096f6875c0de5064b42f262d158ec1e4e2dba0e988

