crates/tmc-langs-cli/tests/snapshots/integration__compress_project_tar@make__passing-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/make/passing-exercise
---
- passing-exercise
- passing-exercise/src
- passing-exercise/src/main.c
- passing-exercise/src/source.c
- passing-exercise/src/source.h
