crates/tmc-langs-cli/tests/snapshots/integration__compress_project_tar@make__passing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/make/passing-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: 221fb1596de1d57e178f176f4cc30913dcf9bc0c11f18371612aee43e7923a21
