crates/tmc-langs-cli/tests/snapshots/integration__compress_project_tar@make__valgrind-failing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/make/valgrind-failing-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: 4bcabff21d80c5401599d3984737be9a8b116ad41df3c8f5231a69600a37c926
